buildscript {
    ext {
        // Core versions
        springBootVersion = "3.4.1"
        flywayDbVersion = "10.20.1"
        jpackageVersion = "1.7.0"
        
        // Library versions
        atlantafxVersion = "2.0.1"
        ikonliVersion = "12.3.1"
        bouncycastleVersion = "1.79"
        graalvmVersion = "24.1.1"
        jnaVersion = "5.15.0"
        jsoupVersion = "1.18.3"
        apacheCommonsLangVersion = "3.17.0"
        apacheCommonsCollectionsVersion = "4.4"
        jacksonVersion = "2.18.2"
        
        // Test versions
        junitVersion = "5.11.4"
        archunitVersion = "1.3.0"
        testfxVersion = "4.0.18"
    }
}

plugins {
    id 'org.springframework.boot' version "$springBootVersion" apply false
    id 'org.flywaydb.flyway' version "$flywayDbVersion" apply false
    id 'org.panteleyev.jpackageplugin' version "$jpackageVersion" apply false
}

wrapper {
    gradleVersion = "8.12"
}

// Project versioning - use environment variable or default
def getVersionName = System.getenv('APP_VERSION') ?: '0.1.0-SNAPSHOT'

subprojects {
    group = 'io.toflowai'
    version = "${getVersionName}"

    apply plugin: 'java'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    compileJava {
        options.encoding = 'UTF-8'
        options.compilerArgs += [
            '--enable-preview',
            '-Xlint:preview'
        ]
    }

    compileTestJava {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['--enable-preview']
    }

    test {
        jvmArgs '--enable-preview'
    }

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs << '-parameters'
    }
}
